@@ -3,7 +3,7 @@ Section: python
 Priority: extra
 XS-Python-Version: 2.4, 2.5
 Maintainer: Matthias Urlichs <matthias@urlichs.de>
-Build-Depends: debhelper (>= 5), cdbs, python-twisted-core
+Build-Depends: debhelper (>= 5), python-twisted-core
 Standards-Version: 3.7.2
 
 Package: homevent
