@@ -4,8 +4,10 @@ homevent (0.2.4) unstable; urgency=low
   * Handle "busy" responses from the OWFS server.
   * Handle OWFS timeouts in non-DIR messages.
   * Run as a "homevent" user (Debian packaging)
+  * Removed the cdbs build system because it's buggy. See debbug 386970:
+    calling dh_pysupport *after* dh_installinit is broken
 
- -- Matthias Urlichs <matthias@urlichs.de>  Tue, 20 Nov 2007 14:08:28 +0100
+ -- Matthias Urlichs <matthias@urlichs.de>  Tue, 20 Nov 2007 14:56:12 +0100
 
 homevent (0.2.3) unstable; urgency=low
 
